tests/ui/const-generics/invariant.stderr
error[E0308]: mismatched types
  --> $DIR/invariant.rs:25:5
   |
LL |     v
   |     ^ one type is more general than the other
   |
   = note: expected reference `&Foo<fn(&())>`
              found reference `&Foo<for<'a> fn(&'a ())>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
